--- a/js/tpl/slug.hbs
+++ b/js/tpl/slug.hbs
@@ -1,3 +1,3 @@
-<div class="foo">
-  La pagina {{slug}} non esiste e non avresti dovuto cercarla8678fy8789
+<div class="container">
+	Stai visualizzando la pagina {{slug}}
 </div>
